--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==2.2.5
 gunicorn==21.2.0
-google-api-python-client==2.92.0
-google-auth==2.22.0
-google-auth-oauthlib==1.2.1
-google-auth-httplib2==0.1.0
+google-api-python-client
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
