--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
 Flask==2.2.5
 gunicorn==21.2.0
-google-api-python-client
-google-auth
-google-auth-oauthlib
-google-auth-httplib2
+imapclient
+pyzmail36
